apps/cinny/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: cinny-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cinny
  template:
    metadata:
      labels:
        app: cinny
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          matchLabel:
            app: cinny
      containers:
      - name: cinny
        image: cinny:latest
        resources:
          requests:
            memory: "150Mi"
            cpu: "20m"
          limits:
            memory: "250Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
          name: http
  strategy:
    blueGreen: 
      activeService: cinny-green-service
      previewService: cinny-blue-service
      autoPromotionEnabled: false
