apps/cinny/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cinny-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cinny.mission.arctiq.codegameeat.commission.arctiq.codegameeat.com`)
      services:
        - name: cinny-green-service
          port: http
    - kind: Rule
      match: Host(`preview.cinny.mission.arctiq.codegameeat.com`)
      services:
        - name: cinny-blue-service
          port: http
  tls:
    certResolver: le
